# offshore-leaks

./: Makefile  README.md  config.py  data_analysis.ipynb  default.py  pyproject.toml
source/: manage_raw_csv_files.py  upload_data_to_aws_neptune.py
terraform/: main.tf
