[tool.poetry]
name = "offshore-leaks"
version = "0.1.0"
description = ""
authors = ["neerajbansal <bansal.neeraj94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.88"
requests = "^2.25.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
